feat: 添加请求缓存、数据库连接池、模型对比、日志分级、Docker优化

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,33 @@ version: '3.8'
 services:
   api-gateway:
     build: .
+    container_name: ai-hub
     ports:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      - LOG_LEVEL=INFO
+    volumes:
+      - ./data.db:/app/data.db
+      - ./app.log:/app/app.log
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 256M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
