--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-dotenv>=1.0.0
 python-multipart>=0.0.6
 cryptography>=41.0.0
 tiktoken>=0.5.0
+pyotp>=2.9.0
+qrcode>=7.4.0
+pillow>=10.0.0
+websockets>=12.0
