feat: 添加缓存模块、监控指标、任务队列、AI工具增强、系统监控面板

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,81 @@
-# API Gateway 配置文件
-# 复制此文件为 .env 并填入你的 API Key
+# AI Hub 配置文件
+# 复制此文件为 .env 并填入你的配置
 
-# ===== 国际主流 =====
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-GOOGLE_API_KEY=
-DEEPSEEK_API_KEY=
+# ===== AI 模型 API Key =====
+OPENAI_API_KEY=sk-xxx
+ANTHROPIC_API_KEY=sk-ant-xxx
+GOOGLE_API_KEY=xxx
+DEEPSEEK_API_KEY=sk-xxx
+ZHIPU_API_KEY=xxx
+MOONSHOT_API_KEY=sk-xxx
+QWEN_API_KEY=sk-xxx
+DOUBAO_API_KEY=xxx
+SILICONFLOW_API_KEY=sk-xxx
+GROQ_API_KEY=gsk_xxx
 
-# ===== 更多平台请参考 .env 完整版 =====
+# ===== 本地模型 =====
+OLLAMA_URL=http://localhost:11434
+VLLM_URL=http://localhost:8080
+
+# ===== OAuth 登录 =====
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=http://localhost:8000/api/auth/github/callback
+
+# ===== 第三方集成 =====
+SLACK_BOT_TOKEN=xoxb-xxx
+SLACK_SIGNING_SECRET=
+FEISHU_APP_ID=cli_xxx
+FEISHU_APP_SECRET=
+
+# ===== 支付集成 =====
+# 支付宝
+ALIPAY_APP_ID=
+ALIPAY_PRIVATE_KEY=
+ALIPAY_PUBLIC_KEY=
+
+# 微信支付
+WECHAT_APP_ID=
+WECHAT_MCH_ID=
+WECHAT_API_KEY=
+WECHAT_API_V3_KEY=
+WECHAT_NOTIFY_URL=
+
+# Stripe
+STRIPE_SECRET_KEY=sk_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+STRIPE_SUCCESS_URL=http://localhost:8000/payment/success
+STRIPE_CANCEL_URL=http://localhost:8000/payment/cancel
+
+# ===== 向量数据库 =====
+# Pinecone
+PINECONE_API_KEY=
+PINECONE_INDEX=
+PINECONE_ENVIRONMENT=us-east-1
+
+# Milvus
+MILVUS_HOST=localhost
+MILVUS_PORT=19530
+
+# ===== 企业功能 =====
+# LDAP/AD
+LDAP_SERVER=
+LDAP_PORT=389
+LDAP_USE_SSL=false
+LDAP_BIND_DN=
+LDAP_BIND_PASSWORD=
+LDAP_BASE_DN=
+
+# ===== 缓存与数据库 =====
+REDIS_URL=redis://localhost:6379/0
+DATABASE_URL=sqlite:///data.db
+# PostgreSQL: postgresql://user:pass@localhost:5432/aihub
+
+# ===== 安全配置 =====
+ENCRYPTION_KEY=
+LOG_LEVEL=INFO
+DOCKER_SANDBOX=false
+
+# ===== 消息队列（可选）=====
+RABBITMQ_URL=amqp://guest:guest@localhost:5672/
+KAFKA_BOOTSTRAP_SERVERS=localhost:9092
