--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,58 @@
+# 环境变量
 .env
+
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+.venv/
+venv/
+env/
+.eggs/
+*.egg-info/
+dist/
+build/
+
+# 数据库
+*.db
+*.sqlite
+*.sqlite3
+
+# 日志
+*.log
+logs/
+
+# 备份
+backups/
+
+# 租户数据
+tenant_data/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# 测试
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Node (desktop/extension)
+node_modules/
+package-lock.json
+yarn.lock
+
+# SSL 证书
+ssl/
+*.pem
+*.key
+*.crt
